2005-08-01  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-file-selection.c: GtkTreeModelSort didn't keep
	the order very well for equal nodes, therefore a sort 
	function was fixed to handle device nodes correctly.
	
	* hildon-file-system-model.c: Now allowing load_uri to access
	gateway before gateway is accessed by UI.

	* hildon-file-system-settings.[ch]: Added
	_hildon_file_system_settings_ready() for checking if all settings
	have been loaded.

2005-07-26  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-fm/hildon-file-system-settings.c (hildon_file_system_settings_setup_dbus): changed pending dbus calls to use default timeout value (which is longer than our old value).

	* hildon-fm/hildon-file-system-model.c : 
	  - Fixed a race condition from volumes-changed handler
	    (not queued to idle anymore).
	  - Restored call to delayed_add_children that was removed earlier.
            Added one new call to this function to set_mmc_state as well
	    (to make mmc immediately show '+' sign if needed).
	
2005-07-25  Luc Pionchon <luc.pionchon@nokia.com>

	* hildon-file-system-settings.c: Added auto activation flags into dbus
	requests

	* hildon-file-selection.c: 
	Added infoprint
	Fixed navigation pane filtering
	Fixed automatic location change

	* en_GB.po: Fixed a typo from translations

	* hildon-file-system-model.c:
	Added checking for readability
	Implemented node referencing support
	Fixed removing of folder objects
	Fixed a problem with uri vs. display text encodings

	* hildon-file-selection.h:
	* hildon-file-chooser-dialog.c:
	Fixed automatic location change

	Fixed File Selection widget folder names

	Fixed dimming for unreadable files in FileSelectionWidget

	Fixed inconsistent drag and drop behaviour in multiple selection for
	FileSelectionWidget

	Fixed inconsistent behaviour of hildon_file_system_model_autoname_uri

	Fixed notes files not opened after duplicating

	Fixed 'autoname_uri' that didn't work properly for files with double
	extensions
